--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body class="nis" style="padding: 8px;">
-        <h1 id="clock"></h1>
+        <h1 id="clock" style="font-size: 1.25em;"></h1>
         <script src="./index.bundle.js"></script>
     </body>
 
